Linking xml with code and add navigation code

--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -21,6 +21,8 @@
         tools:layout="@layout/fragment_blank_b" >
         <action
             android:id="@+id/action_blankB_to_blankA"
-            app:destination="@id/blankA" />
+            app:destination="@id/blankA"
+            app:popUpTo="@id/blankA"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
